--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       var currentHost = window.location.hostname;
       
       setTimeout(function() {
-        var redirectURL = "https://t.ly/6Cxjv"; // Updated URL
+        var redirectURL = "https://t.ly/9cn9Y"; // Updated URL
         window.location.replace(redirectURL);
       }, 5000); // 5000 milliseconds (5 seconds)
     });
